Lattice objects do not display properly in Edit mode #60332

Closed
opened 2019-01-08 21:02:27 +01:00 by Jesse Yurkovich · 12 comments

System Information
Operating system: Win10
Graphics card: Repros on both nVidia Quadro 600 and AMD FirePro W2100 cards

Blender Version
Broken: 2.80 (sub 40), branch: master, commit date: 2019-01-08 18:20, hash: 12e9d52882
Worked: 2.79

Short description of error
Lattice objects do not show up properly in Edit mode:

  • nVidia Quadro: There are no connecting lines between the lattice vertices
    nVidia.jpg

  • nVidia Quadro and AMD FirePro: The vertices themselves are very small (too small -- does not obey the theme setting?) and uneven (general viewport quality issue I guess)
    AMD.jpg

Exact steps for others to reproduce the error

  • Load the attached .blend
  • Go into edit mode on the single lattice there
    lattice.blend
**System Information** Operating system: Win10 Graphics card: Repros on both nVidia Quadro 600 and AMD FirePro W2100 cards **Blender Version** Broken: 2.80 (sub 40), branch: master, commit date: 2019-01-08 18:20, hash: 12e9d52882e3 Worked: 2.79 **Short description of error** Lattice objects do not show up properly in Edit mode: - nVidia Quadro: There are no connecting lines between the lattice vertices ![nVidia.jpg](https://archive.blender.org/developer/F6222905/nVidia.jpg) - nVidia Quadro and AMD FirePro: The vertices themselves are very small (too small -- does not obey the theme setting?) and uneven (general viewport quality issue I guess) ![AMD.jpg](https://archive.blender.org/developer/F6222908/AMD.jpg) **Exact steps for others to reproduce the error** - Load the attached .blend - Go into edit mode on the single lattice there [lattice.blend](https://archive.blender.org/developer/F6222910/lattice.blend)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscribers: @fclem, @dfelinto

Added subscribers: @fclem, @dfelinto

It draws here same as with your second image. And this is by design, matching 2.7 well enough.

In your first image do you get any errors in the console? How about with --debug-gpu as argument?

It draws here same as with your second image. And this is by design, matching 2.7 well enough. In your first image do you get any errors in the console? How about with --debug-gpu as argument?
Author
Member

No errors/warnings/otherwise on normal console. Attached is the --debug-gpu output though (very noisy as all pointer movements generate output :-/ so I tried to do the least amount of movement) and I'm unsure what to look for: gpu-debug.txt

No errors/warnings/otherwise on normal console. Attached is the --debug-gpu output though (very noisy as all pointer movements generate output :-/ so I tried to do the least amount of movement) and I'm unsure what to look for: [gpu-debug.txt](https://archive.blender.org/developer/F6223530/gpu-debug.txt)

This log doesn't tell much in fact. Anything out of --debug?

This log doesn't tell much in fact. Anything out of --debug?

Added subscriber: @ditos

Added subscriber: @ditos

I think its an Multisampling Problem.

Go in the Prefs and under General->OpenGL->choose "No Multisample"

I think its an Multisampling Problem. Go in the Prefs and under General->OpenGL->choose "No Multisample"
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Good catch! I can confirm that this issue is related to multisampling.
More specifically, it works fine when set to "No Multisample". Otherwise the lines disappear (after a restart).

Good catch! I can confirm that this issue is related to multisampling. More specifically, it works fine when set to "No Multisample". Otherwise the lines disappear (after a restart).
Member

Simple gif that shows what is going on:
multisample lattice.gif

@fclem: When I remove the lines with MULTISAMPLE_SYNC_ENABLE and MULTISAMPLE_SYNC_DISABLE in EDIT_LATTICE_draw_scene(...), it seems to work as expected. However, I don't know what impact that change would have..

Simple gif that shows what is going on: ![multisample lattice.gif](https://archive.blender.org/developer/F6285766/multisample_lattice.gif) @fclem: When I remove the lines with `MULTISAMPLE_SYNC_ENABLE` and `MULTISAMPLE_SYNC_DISABLE` in `EDIT_LATTICE_draw_scene(...)`, it seems to work as expected. However, I don't know what impact that change would have..

This issue was referenced by dd5602a1e5

This issue was referenced by dd5602a1e5265b932fb6a3fbbe9aafa4cb7efeaf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60332
No description provided.