Fix T60332: Lattice objects do not display properly in Edit mode

This was caused by wires not having alpha by default, making them disapear
with MSAA.